[gd_scene load_steps=13 format=3]

[ext_resource type="Script" path="res://Script/Shop/Choose_item.gd" id="1"]
[ext_resource type="FontFile" uid="uid://bicgw4numqquw" path="res://Font/HYZhuZiMeiXinTiW.ttf" id="2"]
[ext_resource type="Texture2D" uid="uid://bgr3nkkt8l0xs" path="res://Art/BackPack/119.png" id="3"]
[ext_resource type="Texture2D" uid="uid://clcr2i0a0unil" path="res://Art/BackPack/121.png" id="4"]
[ext_resource type="Texture2D" uid="uid://jat82rbpqkuk" path="res://Art/BackPack/124.png" id="5"]
[ext_resource type="Texture2D" uid="uid://dpbow60dxo1ky" path="res://Art/BackPack/126.png" id="6"]
[ext_resource type="Texture2D" uid="uid://dnruq566a8bo1" path="res://Art/MagicWeapon/220.png" id="7"]
[ext_resource type="Texture2D" uid="uid://eqob07i5mlve" path="res://Art/MagicWeapon/222.png" id="8"]

[sub_resource type="StyleBoxFlat" id="1"]
bg_color = Color(0.568627, 0.32549, 0.129412, 1)
script = null

[sub_resource type="StyleBoxEmpty" id="2"]
script = null

[sub_resource type="StyleBoxFlat" id="3"]
bg_color = Color(1, 1, 1, 1)
border_width_left = 4
corner_radius_top_right = 11
corner_radius_bottom_right = 6
corner_detail = 16
shadow_color = Color(0, 0, 0, 1)
script = null

[sub_resource type="StyleBoxFlat" id="4"]
bg_color = Color(1, 1, 1, 1)
border_width_left = 3
border_width_top = 3
corner_radius_bottom_right = 14
corner_radius_bottom_left = 16
corner_detail = 9
script = null

[node name="ChooseItem" type="Node2D"]
script = ExtResource( "1" )
metadata/_edit_lock_ = true

[node name="BBg" type="ColorRect" parent="."]
offset_left = -555.0
offset_top = -361.0
offset_right = 545.0
offset_bottom = 339.0
color = Color(0, 0, 0, 0.623529)
metadata/_edit_lock_ = true

[node name="ColorRect" type="ColorRect" parent="."]
offset_left = -152.0
offset_top = -144.0
offset_right = 164.0
offset_bottom = 139.0
color = Color(0.541176, 0.372549, 0.176471, 1)
metadata/_edit_lock_ = true

[node name="BG" type="ColorRect" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -145.0
offset_top = -138.0
offset_right = 158.0
offset_bottom = 132.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
color = Color(0.219608, 0.109804, 0.0313726, 1)
metadata/_edit_lock_ = true

[node name="ColorRect" type="ColorRect" parent="BG"]
layout_mode = 0
offset_left = 14.0
offset_top = 42.0
offset_right = 288.0
offset_bottom = 236.0
color = Color(0.643137, 0.407843, 0.117647, 1)
metadata/_edit_lock_ = true

[node name="Title" type="Label" parent="BG"]
layout_mode = 0
offset_left = 62.0
offset_top = 2.0
offset_right = 237.0
offset_bottom = 31.0
theme_override_fonts/font = ExtResource( "2" )
theme_override_font_sizes/font_size = 25
text = "请选择一个物品"
metadata/_edit_lock_ = true

[node name="ItemList" type="ItemList" parent="BG"]
layout_mode = 2
offset_left = 16.0
offset_top = 43.0
offset_right = 288.0
offset_bottom = 233.0
mouse_default_cursor_shape = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_colors/guide_color = Color(1, 1, 1, 1)
theme_override_constants/v_separation = 5
theme_override_constants/icon_margin = 4
theme_override_constants/outline_size = 10
theme_override_fonts/font = ExtResource( "2" )
theme_override_font_sizes/font_size = 19
theme_override_styles/panel = SubResource( "1" )
theme_override_styles/focus = SubResource( "2" )
max_columns = 3
metadata/_edit_lock_ = true

[node name="Qd" type="TextureButton" parent="BG"]
layout_mode = 0
offset_left = 42.0
offset_top = 238.0
offset_right = 110.0
offset_bottom = 271.0
texture_normal = ExtResource( "3" )
texture_pressed = ExtResource( "3" )
texture_hover = ExtResource( "4" )
texture_disabled = ExtResource( "3" )
metadata/_edit_lock_ = true

[node name="Qx" type="TextureButton" parent="BG"]
layout_mode = 0
offset_left = 164.0
offset_top = 238.0
offset_right = 232.0
offset_bottom = 271.0
texture_normal = ExtResource( "5" )
texture_pressed = ExtResource( "5" )
texture_hover = ExtResource( "6" )
texture_disabled = ExtResource( "5" )
metadata/_edit_lock_ = true

[node name="Close" type="TextureButton" parent="BG"]
layout_mode = 0
offset_left = 260.0
offset_top = -2.0
offset_right = 301.0
offset_bottom = 39.0
texture_normal = ExtResource( "7" )
texture_pressed = ExtResource( "7" )
texture_hover = ExtResource( "8" )
texture_disabled = ExtResource( "7" )
metadata/_edit_lock_ = true

[node name="VSeparator" type="VSeparator" parent="."]
offset_left = -160.0
offset_top = -148.0
offset_right = -150.0
offset_bottom = 142.0
theme_override_constants/separation = 10
theme_override_styles/separator = SubResource( "3" )
metadata/_edit_lock_ = true

[node name="VSeparator2" type="VSeparator" parent="."]
offset_left = 162.0
offset_top = -148.0
offset_right = 172.0
offset_bottom = 142.0
theme_override_constants/separation = 10
theme_override_styles/separator = SubResource( "3" )
metadata/_edit_lock_ = true

[node name="HSeparator" type="HSeparator" parent="."]
offset_left = -157.0
offset_top = 139.0
offset_right = 169.0
offset_bottom = 145.0
theme_override_styles/separator = SubResource( "4" )
metadata/_edit_lock_ = true

[node name="HSeparator2" type="HSeparator" parent="."]
offset_left = -157.0
offset_top = -150.0
offset_right = 169.0
offset_bottom = -143.0
theme_override_styles/separator = SubResource( "4" )
metadata/_edit_lock_ = true

[connection signal="item_selected" from="BG/ItemList" to="." method="_on_item_list_item_selected" flags=18]
[connection signal="pressed" from="BG/Qd" to="." method="_on_qd_pressed" flags=18]
[connection signal="pressed" from="BG/Qx" to="." method="_on_qx_pressed" flags=18]
[connection signal="pressed" from="BG/Close" to="." method="_on_close_pressed" flags=18]
